tests/reference/asr-template_error_02-a3d3b4c.stderr
semantic error: Intent attribute can only be applied to procedure arguments
  --> tests/errors/template_error_02.f90:20:22
   |
20 |             type(T), intent(in) :: x, y, a
   |                      ^^^^^^^^^^ 
